# AntOS

./: .eslintignore  .eslintrc.yml  .gitignore  .gitmodules  README.md  deploy.sh  package-lock.json  package.json  rollup.config.js  rollup_build.config.js  rollup_default.config.js  rollup_deploy.config.js  tsconfig.jest.json  tsconfig.json  tslint.json
.github/workflows/: test.yml
src/: ErrorMapper.ts  bios.ts  boot_loader.ts  extensions.ts  main.ts  memory_hack.js  test.ts  types.d.ts  utility.ts
src/_old/: creep.ts  empire.ts  extensions.ts  init.ts  initialize_memory.ts  loanUserList.ts  migration.ts  region.ts  room.ts  room_layout.ts  spawn.ts
src/application/: any_problem.ts  any_task.ts  problem.ts  task.ts  task_decoder.ts  task_event.ts  task_identifier.ts  task_logger.ts  task_manager.ts  task_performance_store.ts  task_profit.ts  task_request.ts  task_requests.ts  task_state.ts  task_status.ts
src/asynchronous_task/: asynchronous_task.ts  asynchronous_task_decoder.ts
src/classes/: creep.ts  empire.ts  extensions.ts  init.ts  migration.ts  region.ts  room.ts  room_layout.ts  tower.ts  utils.ts
src/error_mapper/: ErrorMapper.ts
src/event_handler/: event.ts  event_manager.ts  event_memory.ts
src/experimental/: problemsolver.ts  scope.ts
src/game/: game_info.ts  game_map.ts  game_record.ts  invader.ts  sign.ts  source_keeper.ts
src/game_object_prototype/: creep.ts
src/game_object_task/: creep_task.ts  game_object_task.ts  spawn_task.ts  (+2 more)
test/: sample.test.ts
types/: types.d.ts
wasm/rust-wasm/: Cargo.toml
wasm/rust-wasm/src/: lib.rs
(+1209 files in other folders)
